<resources>
    <string name="app_name">Income and Expenses</string>
    <string name="preference_file_key">com.michalratajsky.expensio.PREFERENCES</string>
    <string name="preference_current_category">current_category</string>
    <string name="preference_current_chart_type">current_chart_type</string>

    <string name="title_activity_categories">Manage categories</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="deleted">Deleted</string>
    <plurals name="selected_count">
        <!--
             As a developer, you should always supply "one" and "other"
             strings. Your translators will know which strings are actually
             needed for their language. Always include %d in "one" because
             translators will need to use %d for languages where "one"
             doesn't mean 1 (as explained above).
          -->
        <item quantity="one">%d item selected</item>
        <item quantity="other">%d items selected</item>
    </plurals>

    <string name="drawer_categories_title">Categories</string>
    <string name="drawer_categories_all">All</string>
    <string name="drawer_manage_categories">Manage categories</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="input_description">Description</string>
    <string name="input_amount">Amount</string>
    <string name="input_expense">Expense</string>
    <string name="input_income">Income</string>
    <string name="input_date">Date</string>
    <string name="input_categories">Categories</string>
    <string name="input_notes">Notes</string>

    <string name="input_err_description">Enter the description</string>
    <string name="input_err_amount">Enter the amount</string>

    <string name="category_dialog_title_add">New category</string>
    <string name="category_dialog_title_edit">Edit category</string>
    <string name="category_dialog_hint">Enter name of the category</string>
    <string name="category_dialog_confirm">Are you sure you want to delete selected categories?</string>

    <string name="expense_dialog_confirm">Are you sure you want to delete selected items?</string>

    <string name="expense_category_dialog_select">Select categories</string>

    <string name="chart_monthly_overview">Monthly overview</string>
    <string name="chart_yearly_overview">Yearly overview</string>

    <string name="chart_select_period">Change period</string>
    <string name="chart_select_type">Change type of chart</string>

    <string name="chart_period_title">Choose the period of chart</string>
    <string name="chart_type_title">Choose the type of chart</string>

    <string-array name="chart_period">
        <item>Monthly overview</item>
        <item>Yearly overview</item>
    </string-array>
    <string name="chart_category">Category %s</string>
    <string name="chart_year">Year %d</string>
</resources>
